Include/internal/pycore_pylifecycle.h
@@ -68,6 +68,7 @@ extern void _PyFloat_Fini(void);
 extern void _PySlice_Fini(void);
 extern void _PyAsyncGen_Fini(void);
 
+extern int _PySignal_Init(int install_signal_handlers);
 extern void PyOS_FiniInterrupts(void);
 
 extern void _PyExc_Fini(void);
